# StumpEngine_Digger

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  what.n
.github/workflows/: cmake.yml
Digger/: AchievementSystem.cpp  CMakeLists.txt  GameModes.h  LevelScene.cpp  LevelScene.h  MainMenuScene.cpp  Scenes.h  main.cpp
Digger/Commands/: AddScorePlayerCommand.cpp  AddScorePlayerCommand.h  CommandMoveTransform.cpp  CommandMoveTransform.h  DiggerMoveCommand.cpp  DiggerMoveCommand.h  HurtPlayerCommand.cpp
Digger/Components/: BackGroundDrawer.cpp  BackGroundDrawer.h  CharacterMovement.cpp  CharacterMovement.h  CharacterStats.cpp  CharacterStats.h  CharacterStatsDisplay.cpp  CharacterStatsDisplay.h  ColliderGrid.cpp  ColliderGrid.h  CollisionHolder.cpp  CollisionHolder.h  CollisionMonitor.cpp  CollisionMonitor.h  CollisionSubject.cpp  CollisionSubject.h  Digger.cpp  Digger.h  DirtDrawer.cpp  DirtDrawer.h  DirtEraser.cpp  DirtEraser.h  DirtGrid.cpp  DirtGrid.h  FpsShowCase.cpp  GameDataTracker.cpp  GameDataTracker.h  Gem.cpp  Gem.h  GetHit.cpp  GetHit.h  GoldBag.cpp  GoldBag.h  GridTransform.cpp  GridTransform.h  GridWalls.cpp  GridWalls.h  HighScoreDisplay.cpp  HighScoreDisplay.h  ImguiTashTheCache.h  (+7 more)
Digger/Components/GoldBag/: GoldBag.cpp  GoldBag.h  GoldBagCollectable.cpp  GoldBagCollectable.h  GoldBagFalling.cpp  GoldBagFalling.h  GoldBagIdle.cpp  GoldBagIdle.h  GoldBagPushed.cpp  GoldBagPushed.h  IGoldBagState.h
Digger/Components/Nobbin/: INobbinState.h  INobelState.cpp  INobelState.h  Nobbin.cpp  Nobbin.h  NobbinAI.cpp  NobbinAI.h  NobbinDrillerState.cpp  NobbinDrillerState.h  NobbinNormalState.cpp  NobbinNormalState.h
Digger/LevelLoading/: JsonStructures.h
Digger/Scene/: LevelScene.cpp  MainMenuScene.cpp  Scenes.h
StumpEngine/: AchievementSystem.cpp  AchievementSystem.h  CMakeLists.txt  Command.h  EngineTime.cpp  EngineTime.h  Event.h  EventListener.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Singleton.h  StumpEngine.cpp  StumpEngine.h  Utils.h
StumpEngine/Component/: Component.cpp  Component.h  FpsShowCase.cpp  FpsShowCase.h  IRenderable.h  TextDisplay.cpp  TextDisplay.h  Texture2D.cpp  Texture2D.h  Texture2DSpriteSheet.cpp  Texture2DSpriteSheet.h  Transform.cpp  Transform.h
StumpEngine/Input/: GamePadEnums.h  GamepadDevice.cpp  GamepadDevice.h  GamepadHandler.h  GamepadHandlerSDL.cpp  GamepadHandlerXInput.cpp  InputBinding.cpp  InputBinding.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  KeyboardDevice.cpp  KeyboardDevice.h
StumpEngine/Sleep/: HighResolutionSleep.h  HighResolutionSleepGlobal.cpp  HighResolutionSleepWindows.cpp
StumpEngine/SoundSystem/: SoundSystem.h  SoundSystemLocator.cpp  SoundSystemLocator.h  SoundSystemLogger.cpp  SoundSystemLogger.h  SoundSystemNull.cpp  SoundSystemNull.h  SoundSystemSDL3_Mixer.cpp  SoundSystemSDL3_Mixer.h
data/: canva2s.png-autosave.kra  driller.png-autosave.kra  level1.json
engine/: AchievementSystem.cpp  CMakeLists.txt  EngineTime.h  Event.h  GameObject.cpp  GameObject.h
engine/Component/: TextDisplay.cpp
engine/Input/: GamepadHandlerSDL.cpp  InputHandler.cpp
game/: CMakeLists.txt  main.cpp
game/Components/: CharacterMovement.cpp  FpsShowCase.cpp  OrbitAround.cpp  OrbitAround.h
src/: AchievementSystem.cpp  AchievementSystem.h  CharacterMovement.cpp  CharacterMovement.h  Command.h  Component.cpp  Component.h  EngineTime.cpp  EngineTime.h  Event.h  EventListener.h  FpsShowCase.cpp  FpsShowCase.h  GameCommands.cpp  GameCommands.h  GameObject.cpp  GameObject.h  GamePadEnums.h  GamepadHandler.h  GamepadHandlerSDL.cpp  GamepadHandlerXInput.cpp  ImguiCacheTest.cpp  ImguiCacheTest.h  ImguiTashTheCache.cpp  ImguiTashTheCache.h  InputHandler.cpp  InputHandler.h  Minigin.cpp  Minigin.h  OrbitAround.cpp  OrbitAround.h  ResourceManager.h  TextDisplay.cpp  TextDisplay.h  Texture2D.cpp  Texture2D.h  Time.cpp  Time.h  Transform.cpp  Transform.h  (+3 more)
src/Commands/: AddScorePlayerCommand.h  CommandMoveTransform.cpp  HurtPlayerCommand.h
src/Components/: CharacterHealth.cpp  CharacterHealth.h  CharacterMovement.cpp  CharacterMovement.h  CharacterStats.cpp  CharacterStats.h  CharacterStatsDisplay.cpp  CharacterStatsDisplay.h  Component.cpp  FpsShowCase.cpp  FpsShowCase.h  OrbitAround.cpp  OrbitAround.h  TextDisplay.cpp  TextDisplay.h  Texture2D.cpp
src/Input/: GamepadHandler.h  GamepadHandlerXInput.cpp  InputHandler.h
src/Sleep/: HighResolutionSleep.h  HighResolutionSleepGlobal.cpp
